Cria estrutura html

--- a/conclusao.html
+++ b/conclusao.html
@@ -9,6 +9,19 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <div class="container">
+        <form action="" class="form">
+         <h3>💻Login Perfil💻</h3>
+         <label for="">Nome Completo:</label><br>
+         <input type="name" name="" id=""><br><br>
+         <label for="">Data de Nascimento</label><br>
+         <input type="date"><br><br>
+        <label for="">E-mail:</label><br>
+        <input type="email" name="" id=""><br><br>
+        <label for="">Senha:</label><br>
+        <input type="password" name="" id=""><br><br>
+        <button type="button">Entrar</button>
+        </form>
+    </div>
 </body>
 </html>
