--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <h3>💻Login Perfil💻</h3>
          <label for="">Nome Completo:</label><br>
          <input type="name" name="" id=""><br><br>
-         <label for="">Data de Nascimento</label><br>
+         <label for="">Data de Nascimento:</label><br>
          <input type="date"><br><br>
         <label for="">E-mail:</label><br>
         <input type="email" name="" id=""><br><br>
