Cria o código página de cadastro de compra

--- a/endereco.html
+++ b/endereco.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Cadastro de Compra</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='endereco.css'>
     <script src='main.js'></script>
@@ -11,16 +11,26 @@
 <body>
     <div class="container">
         <form action="" class="form">
-         <h3>💻Login Perfil💻</h3>
-         <label for="">Alguma coisa:</label><br>
-         <input type="name" name="" id=""><br><br>
-         <label for="">Data de Nascimento</label><br>
-         <input type="date"><br><br>
-        <label for="">E-mail:</label><br>
-        <input type="email" name="" id=""><br><br>
-        <label for="">Senha:</label><br>
-        <input type="password" name="" id=""><br><br>
-        <button type="button">Entrar</button>
+         <h1>Cadastro de Compra</h1>
+         <h3>Configurações de Endereço:</h3>
+         <label for="">Estado:</label><br>
+         <input type="estado" name="" id=""><br><br>
+         <label for="">Região:</label><br>
+         <input type="região"><br><br>
+         <label for="">Bairro:</label><br>
+         <input type="bairro" name="" id=""><br><br>
+         <label for="">Rua:</label><br>
+         <input type="rua"><br><br>
+         <label for="">Número da casa:</label><br>
+         <input type="número da casa" name="" id=""><br><br>
+         <label for="">Casa ou Trabalho:</label><br>
+         <input type="casa ou trabalho"><br><br>
+         <h3>Configurações adicionais</h3>
+         <label for="">Número de Celular:</label><br>
+         <input type="número de celular"><br><br>
+         <label for="">CPF:</label><br>
+         <input type="CPF"><br><br>
+         <button type="button">Entrar</button>
         </form>
     </div>
 </body>
