--- a/conclusao.html
+++ b/conclusao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Concluído</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='conclusao.css'>
     <script src='main.js'></script>
@@ -11,16 +11,8 @@
 <body>
     <div class="container">
         <form action="" class="form">
-         <h3>💻Login Perfil💻</h3>
-         <label for="">Nome Completo:</label><br>
-         <input type="name" name="" id=""><br><br>
-         <label for="">Data de Nascimento</label><br>
-         <input type="date"><br><br>
-        <label for="">E-mail:</label><br>
-        <input type="email" name="" id=""><br><br>
-        <label for="">Senha:</label><br>
-        <input type="password" name="" id=""><br><br>
-        <button type="button">Entrar</button>
+         <h3>Compra Concluída!!</h3>
+         <h3>Obrigada, por comprar conosco^^</h3>
         </form>
     </div>
 </body>
