Reorganiza os elementos do código

--- a/conclusao.html
+++ b/conclusao.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <form action="" class="form">
-         <h3>Compra Concluída!!</h3>
-         <h3>Obrigada, por comprar conosco^^</h3>
+         <h3>Cadastro Concluída!!</h3>
+         <h3>🎉Obrigada, por se cadastrar com a gente🎉</h3>
         </form>
     </div>
 </body>
