Cria ligação entre páginas através do button

--- a/endereco.html
+++ b/endereco.html
@@ -30,7 +30,11 @@
          <input type="número de celular"><br><br>
          <label for="">CPF:</label><br>
          <input type="CPF"><br><br>
-         <button type="button">Entrar</button>
+         <!-- <button type="button">Entrar</button> -->
+
+         <div class="button">
+            <a href="/conclusao.html"> Entrar </a>
+        </div>
         </form>
     </div>
 </body>
