--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <title>Entrar</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
-    <script src='main.js'></script>
 </head>
 <body>
      <div class="container">
         <form action="" class="form">
-         <h3>💻Login Perfil💻</h3>
-         <label for="">Nome Completo:</label><br>
-         <input type="nome completo" name="" id=""><br>
-         <label for="">Data de Nascimento:</label><br>
-         <input type="date" name="" id=""><br><br>
-         <label for="">E-mail:</label><br>
-         <input type="email" name="" id=""><br><br>
-         <label for="">Senha:</label><br>
-         <input type="password"><br><br>
-         <button type="button">Entrar</button>
+            <h3>💻Login Perfil💻</h3>
+            <label for="">Nome Completo:</label><br>
+            <input type="full name" name="" id=""><br><br>
+            <label for="">Data de Nascimento:</label><br>
+            <input type="date" name="" id=""><br><br>
+            <label for="">E-mail:</label><br>
+            <input type="email" name="" id=""><br><br>
+            <label for="">Senha:</label><br>
+            <input type="password"><br><br>
+            <!-- <button type="button">Entrar</button> -->
+
+            <div class="button">
+                <a href="/endereco.html"> Entrar </a>
+            </div>
          </form>
      </div>
 </body>
