--- a/endereco.html
+++ b/endereco.html
@@ -14,20 +14,20 @@
          <h1>🛍️Cadastro de Compra🛍️</h1>
          <h3>Configurações de Endereço:</h3>
          <label for="">Estado:</label><br>
-         <input type="estado" name="" id=""><br><br>
+         <input type="state" name="" id=""><br><br>
          <label for="">Região:</label><br>
-         <input type="região"><br><br>
+         <input type="region"><br><br>
          <label for="">Bairro:</label><br>
-         <input type="bairro" name="" id=""><br><br>
+         <input type="neighborhood" name="" id=""><br><br>
          <label for="">Rua:</label><br>
-         <input type="rua"><br><br>
+         <input type="road"><br><br>
          <label for="">Número da casa:</label><br>
-         <input type="número da casa" name="" id=""><br><br>
+         <input type="house number" name="" id=""><br><br>
          <label for="">Casa ou Trabalho:</label><br>
-         <input type="casa ou trabalho"><br><br>
+         <input type="home or work"><br><br>
          <h3>Configurações adicionais</h3>
          <label for="">Número de Celular:</label><br>
-         <input type="número de celular"><br><br>
+         <input type="phone number"><br><br>
          <label for="">CPF:</label><br>
          <input type="CPF"><br><br>
          <!-- <button type="button">Entrar</button> -->
