--- a/endereco.html
+++ b/endereco.html
@@ -33,7 +33,7 @@
          <!-- <button type="button">Entrar</button> -->
 
          <div class="button">
-            <a href="/conclusao.html"> Entrar </a>
+            <a href="../form-CadEcommerce-/conclusao.html"> Entrar </a>
         </div>
         </form>
     </div>
