--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- <button type="button">Entrar</button> -->
 
             <div class="button">
-                <a href="../form-CadEcommerce-/endereco.html"> Entrar </a>
+                <a href="endereco.html"> Entrar </a>
             </div>
          </form>
      </div>
